# fastapi-customer-complaint

./: pyproject.toml
app/: config.py
app/dao/: base.py  dao.py
app/database/: db.py
app/dependencies/: dao_dep.py
app/models/: complaints.py
app/routers/: complaints.py
app/schemas/: complaint.py
app/utils/: external_api.py
